--- a/mobile/src/main/assets/SimulateLife3.html
+++ b/mobile/src/main/assets/SimulateLife3.html
@@ -11,21 +11,38 @@
 <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
 <![endif]-->
 <!-- tell iPhone not to shrink mobile website -->
-<meta name="viewport" content="width=320, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"/>
+<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 </head>
 <div id="main-wrapper">
+<div id="controls">
+<div class="sentence">Sex:</div>
+<div id="sex" class="dropdown-wrapper", tabindex="1"  style="float:left">
+            <span>female</span>
+            <ul class="dropdown"></ul>
+        </div>
+
+        <div  class="sentence">, Age:</div>
+
+        <div id="age">
+            <div id="agevalue"></div>
+            <div id="sliderholder"></div>
+        </div>
+
+<!--        <div class="sentence">years old.</div> -->
+
+    </div>
+    <div id="speed">
+        <div class="togglebutton slow current" data-val="slow">Slow</div>
+        <div class="togglebutton fast" data-val="fast">Fast</div>
+    </div>
 
     <div id="line-chart"></div>
 
     <div id="bars"></div>
 
     <div id="debug"></div>
-    <div id="age">
-        <div id="agevalue"></div>
-        <div id="sliderholder"></div>
-    </div>
 </div>
 
 <script src="d3-3-5-5.min.js"></script>
@@ -60,7 +77,6 @@ var margin = {top: 35, right: 0, bottom: 40, left: 50},
 
 // Set ranges
 var x = d3.scale.linear()
-    .domain([0,120])
     .range([0, width]);
 var y = d3.scale.linear()
     .domain([0, 1])
@@ -68,11 +84,7 @@ var y = d3.scale.linear()
 
 // Define axes
 var xAxis = d3.svg.axis().scale(x)
-    .orient("bottom")
-    .ticks(12)
-    .tickFormat(function(d) {
-        return (d);})
-    .tickSize(10);
+    .orient("bottom");
 var yAxis = d3.svg.axis().scale(y)
     .orient("left")
     .ticks(5)
@@ -242,20 +254,160 @@ dot_it(life);
 
 function dot_it ( life) {
 
+    x.domain(d3.extent(life, function(d) { return d.age; }));
+    // Sex
+    var sex = ["male"];
+    var sexDropdown = d3.select("#controls #sex");
+    var sexli = sexDropdown.select(".dropdown").selectAll("li")
+        .data(sex)
+      .enter().append("li")
+        .text(function(d) { return d; });
+    sexli.on("click", function(d) {
+        USER_SEX = d;
+
+        d3.select("#sex span").text(d);
+        if (d == "male") {
+            d3.select(this)
+                .datum("female")
+                .text("female");
+        } else {
+            d3.select(this)
+                .datum("male")
+                .text("male");
+        }
+        resetCounts();
+        updateSex();
+    });
 
 
+    sexDropdown.on("click", function(d, i) {
+        d3.select(this).classed("active", !d3.select(this).classed("active"));
+    });
 
 
+    // Age slider
+    var slideMargin = {top: 2, right: 7, bottom: 2, left: 7},
+        slideWidth = 157 - slideMargin.left - slideMargin.right,
+        slideHeight = 20 - slideMargin.bottom - slideMargin.top;
+
+    var xAge = d3.scale.linear()
+        .domain([0, 116])
+        .range([0, slideWidth]);
 
 
+    var brush = d3.svg.brush()
+        .x(xAge)
+        .extent([0,0])
+        .on("brush", brushed);
+
+    var svgSlider = d3.select("#sliderholder").append("svg")
+        .attr("width", slideWidth + slideMargin.left + slideMargin.right)
+        .attr("height", slideHeight + slideMargin.top + slideMargin.bottom)
+        .append("g")
+          .attr("transform", "translate(" + slideMargin.left + "," + slideMargin.top + ")");
+
+    // Pause sim when adjusting slider.
+    svgSlider.on("mousedown", function() {
+        paused = true;
+        resetCounts();
+    });
+    d3.select("#main-wrapper").on("mouseup", function() {
+        if (slider_brushed) {
+			paused = false;
+	        resetCounts();
+	        transition();
+			slider_brushed = false;
+		}
+
+    });
+
+    svgSlider.append("g")
+        .attr("class", "x axis")
+        .attr("transform", "translate(0," + slideHeight / 2 + ")")
+        .call(d3.svg.axis()
+            .scale(xAge)
+            .orient("bottom")
+            .ticks(0)
+            .tickSize(0)
+            .tickPadding(12))
+        .select(".domain")
+        .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); })
+            .attr("class", "halo");
+
+
+    var slider = svgSlider.append("g")
+        .attr("class", "slider")
+        .call(brush);
+
+    slider.selectAll(".extent,.resize")
+        .remove();
+
+    slider.select(".background")
+        .attr("height", slideHeight)
+        .style("cursor", "col-resize");
+
+    var handle = slider.append("circle")
+        .attr("class", "handle")
+        .attr("transform", "translate(0," + slideHeight / 2 + ")")
+        .attr("r", 6)
+        .attr("cx", xAge(USER_AGE));
 
     var age_value = d3.select("#agevalue");
     age_value.text(USER_AGE);
 
-    var xAge = d3.scale.linear()
-        .domain([0, 116])
-        ;
+    function brushed() {
+        slider_brushed = true;
 
+		var value = brush.extent()[0];
+
+        if (d3.event.sourceEvent) { // not a programmatic event
+            value = Math.round( xAge.invert(d3.mouse(this)[0]) );
+            if (value < 0) value = 0;
+            else if (value > 116) value = 116;
+            brush.extent([value, value]);
+
+            age_value.text(value);
+
+            // Update age highlighter
+            svg.select(".agehighlight rect")
+                .attr("width", x(value));
+            age_highlight.select("text")
+                .attr("transform", "translate("+x((value-0.8))+","+y(0.07)+")rotate(-90)")
+            age_highlight.select("line")
+                .attr("x1", x(value))
+                .attr("x2", x(value));
+
+            // Update the indicator point, too
+            indicatorPoint.attr("transform", function() {
+                if (USER_SEX == "female") {
+                    return "translate(" + x(life[value].age) + "," + y(1-life[value].female_prob_death) + ")";
+                } else {
+                    return "translate(" + x(life[value].age) + "," + y(1-life[value].male_prob_death) + ")";
+                }
+            });
+        }
+
+        handle.attr("cx", xAge(value));
+
+        USER_AGE = value;
+        // CURR_AGE = value;
+        resetCounts();
+    }
+
+
+    // Speed toggle
+    d3.selectAll(".togglebutton")
+        .on("click", function() {
+            if (d3.select(this).attr("data-val") == "slow") {
+                USER_DURATION = 16;
+                d3.select(".slow").classed("current", true);
+                d3.select(".fast").classed("current", false);
+            } else {
+                USER_DURATION = 1;
+                d3.select(".fast").classed("current", true);
+                d3.select(".slow").classed("current", false);
+            }
+        });
 
 
 
@@ -310,7 +462,7 @@ function dot_it ( life) {
 
     // Annotation
     ageAnnotate(0, "Escape from the womb");
-    ageAnnotate(18,"Driver's license, gimme");
+    ageAnnotate(16, "Driver's license, gimme");
     ageAnnotate(21, "Beer, gimme");
     ageAnnotate(67, "Full retirement");
     ageAnnotate(78.64, "Overall life expectancy");
@@ -342,7 +494,115 @@ function dot_it ( life) {
         .attr("y2", 0);
 
 
+    // Data line
+    var lifepath = svg.append("path")
+        .attr("class", "line")
+        .attr("d", line(life));
 
+
+    var indicatorPoint = svg.append("circle")
+        .attr("r", 6)
+        .attr("transform", function() {
+            if (USER_SEX == "female") {
+                return "translate(" + x(life[CURR_AGE].age) + "," + y(1-life[CURR_AGE].female_prob_death) + ")";
+            } else {
+                return "translate(" + x(life[CURR_AGE].age) + "," + y(1-life[CURR_AGE].male_prob_death) + ")";
+            }
+        });
+
+
+
+    // First simulation and move.
+    var end_age = simOneLife(USER_AGE, USER_SEX, life);
+    transition();
+
+    function transition() {
+        if (CURR_AGE <= end_age && !paused) {
+            var i = CURR_AGE;
+
+            indicatorPoint
+                .attr("data-val", CURR_AGE)
+                .transition()
+                .duration(USER_DURATION)
+                .attr("transform", function() {
+                    if (USER_SEX == "female") {
+                        return "translate(" + x(life[i].age) + "," + y(1-life[i].female_prob_death) + ")";
+                    } else {
+                        return "translate(" + x(life[i].age) + "," + y(1-life[i].male_prob_death) + ")";
+                    }
+                })
+                .each("end", transition);
+        } else {
+
+            // Drop effect for circle for death
+            svg.append("circle")
+                .attr("class", "death")
+                .attr("r", 6)
+                .attr("transform", function() {
+                    var lindex = d3.max([CURR_AGE-1, 0]);
+                    if (USER_SEX == "female") {
+                        return "translate(" + x(life[lindex].age) + "," + y(1-life[lindex].female_prob_death) + ")";
+                    } else {
+                        return "translate(" + x(life[lindex].age) + "," + y(1-life[lindex].male_prob_death) + ")";
+                    }
+                })
+                .transition()
+                .duration(800)
+                .ease("bounce")
+                .attr("transform", function() {
+                    var lindex = d3.max([CURR_AGE-1, 0]);
+                    return "translate(" + x(life[lindex].age) + "," + y(0) +")";
+                })
+                .remove();
+
+            if (!paused) {
+                var lindex = d3.max([CURR_AGE-1, 0]);
+
+
+
+
+
+
+                // Run another sim and go again.
+                CURR_AGE = USER_AGE;
+                end_age = simOneLife(USER_AGE, USER_SEX, life);
+
+
+                transition();
+            }
+        } // @end else
+
+        CURR_AGE++;
+    }
+
+    function translateAlong(path) {
+        var l = path.getTotalLength();
+        return function(d, i, a) {
+            return function(t) {
+                var p = path.getPointAtLength(t * l);
+                return "translate(" + p.x + "," + p.y + ")";
+            }
+        }
+    }
+
+    function updateSex() {
+        lifepath
+            .transition()
+            .duration(700)
+            .attr("d", line(life));
+    }
+
+    function resetCounts() {
+        CURR_AGE = USER_AGE;
+
+        counts = Array.apply(null, Array(120)).map(Number.prototype.valueOf,0);
+        bin_counts = Array.apply(null, Array(6)).map(Number.prototype.valueOf,0);
+
+        svg_bars.selectAll("rect")
+            .data(counts)
+            .attr("y", function(d) { return height_bars - y_bars(d); })
+            .attr("height", function(d) { return y_bars(d); });
+    }
 
 }; // @end d3.csv()
 
