--- a/mobile/src/main/assets/horizontal.html
+++ b/mobile/src/main/assets/horizontal.html
@@ -20,13 +20,13 @@
     <div id="line-chart"></div>
 
     <div id="bars"></div>
-<!--
-    <div id="debug"></div>
-    <div id="age">
-        <div id="agevalue"></div>
-        <div id="sliderholder"></div>
-    </div>
--->
+    <!--
+        <div id="debug"></div>
+        <div id="age">
+            <div id="agevalue"></div>
+            <div id="sliderholder"></div>
+        </div>
+    -->
 </div>
 
 <script src="d3-3-5-5.min.js"></script>
@@ -48,55 +48,47 @@ if ( circle_radius < 6 ) {
 }
 var AGE_LOWER = Math.max(0,USER_AGE -30);
 
-
-
 // Set dimensions - chart if offset down and to the right so make widths and heights 2*smaller
 var margin = {top: 35, right: 0.05*width_base, bottom: 40, left: 0.05*width_base},
     width = width_base - 2*margin.left - margin.right,
     height = height_base - 2*margin.top - margin.bottom;
 
-//var margin = {top: 35, right: 0, bottom: 40, left: 50},
-//        width = 1090 - margin.left - margin.right,
-//        height = 350 - margin.top - margin.bottom;
-
-
-//var margin = {top: 35, right: 0, bottom: 40, left: 50},
-//    width = .95*widthher,
-//    height = "95%";
-
 // Set ranges
 var x = d3.scale.linear()
-    .domain([0,1])
-    .range([width, 0]);
+    .domain([0, 120-USER_AGE])
+    .range([0,width]);
+
 var y = d3.scale.linear()
-    .domain([AGE_LOWER, 120])
+    .domain([0,1])
     .range([height, 0]);
 
 // Define axes
 var xAxis = d3.svg.axis().scale(x)
     .orient("bottom")
+    .ticks(12)
+    .tickFormat(function(d) {
+        return "+" + d;
+
+        })
+        ;
+//    .tickSize(10);
+
+
+var yAxis = d3.svg.axis().scale(y)
+    .orient("left")
     .ticks(5)
     .tickFormat(function(d) {
         return (d*100) + "%";
     })
     .tickSize(20);
 
-var yAxis = d3.svg.axis().scale(y)
-    .orient("left")
-    .ticks(12)
-    .tickFormat(function(d) {
-        return (d);})
-    .tickSize(10);
-
-
-
 // Define line this is a helper function
 var line = d3.svg.line()
     .x(function(d) {
-        return x(d.this_prob);
+        return x(d.age-USER_AGE);
         })
     .y(function(d)
-        { return y(d.age); });
+        { return y(d.this_prob); });
 
 // Define line
 //var line = d3.svg.line()
@@ -246,7 +238,8 @@ var life =[
     }
 
 
- // Define SVG object old
+
+// Define SVG object old
 var svg = d3.select("#line-chart").append("svg")
 .attr("width", width + margin.left + margin.right)
 .attr("height", height + margin.top + margin.bottom)
@@ -264,88 +257,60 @@ svg.append("g")
         .attr("x", x(0.54))
         .attr("y", height+margin.bottom)
         .attr("class", "subtitle")
-        .text("Probability of 1 More Year");
+        .text("Additional Years to Live");
 
+svg.append("line")
+      .attr("class", "annotation")
+            .attr("x1", x(0))
+            .attr("x2", x(120-USER_AGE))
+            .attr("y1", y(0.5))
+            .attr("y2", y(0.5));
+svg.append("text")
+            .attr("class", "annotation")
+            .attr("transform", "translate("+x((60-USER_AGE/2))+","+y(0.5+.006)+")")
+            .text("AVERAGE CHANCE");
+
+svg.append("line")
+      .attr("class", "annotation")
+            .attr("x1", x(120-USER_AGE))
+            .attr("x2", x(120-USER_AGE))
+            .attr("y1", y(0))
+            .attr("y2", y(0.5));
+svg.append("text")
+            .attr("class", "annotation")
+            .attr("transform", "translate("+x((60-USER_AGE/2))+","+y(0.1)+")rotate(-90)")
+            .text("ADDITIONAL YEARS");
+
+
+
+//            .attr("transform", "translate("+ width + ")")
 
 svg.append("g")
         .attr("class", "y axis")
-            .attr("transform", "translate("+ width + ")")
         .call(yAxis);
 
     svg.append("text")
             .attr("class", "annotation")
-            .attr("transform", "translate("+x((0-0.007))+","+y((USER_AGE))+")rotate(-90)")
-            .text("AGE IN YEARS");
-
-
-svg.append("line")
-      .attr("class", "annotation")
-            .attr("x1", x(1))
-            .attr("x2", x(1))
-            .attr("y1", y(0))
-            .attr("y2", y(USER_AGE));
-svg.append("text")
-            .attr("class", "annotation")
-            .attr("transform", "translate("+x((1+0.007))+","+y(AGE_LOWER)+")rotate(-90)")
-            .text("CURRENT AGE");
+            .attr("transform", "translate("+x((0-0.007))+","+y((0))+")rotate(-90)")
+            .text("Chances this will happen");
 
 var indicatorPoint = svg.append("circle")
         .attr("r", circle_radius)
         .attr("transform", function() {
             if (USER_SEX == "female") {
-                return "translate(" + x(1) + "," + y(life[CURR_AGE].age) + ")";
+                return "translate(" + x(life[CURR_AGE].age-USER_AGE) + "," + y(1) + ")";
             } else {
-                return "translate(" + x(1) + "," + y(life[CURR_AGE].age) + ")";
+                return "translate(" + x(life[CURR_AGE].age-USER_AGE) + "," + y(1) + ")";
             }
         });
+
+
+
 var life_path =      svg.append("path")
                     .attr("class", "line")
-                    .attr("d", line(life));
-
-    // First simulation and move.
-    var end_age = simOneLife(USER_AGE, USER_SEX, life);
-    transition();
-    var curr_prob_of_life = 1;
-    function transition() {
-        if (CURR_AGE <= end_age ) {
-            var i = CURR_AGE;
-            curr_prob_of_life =  curr_prob_of_life*(1-life[i].female_prob_death);
-//            curr_prob_of_life =  (1-life[i].female_prob_death);
-// so what is the point of this              .attr("data-val", CURR_AGE)
-            indicatorPoint
-
-                .transition()
-                .duration(USER_DURATION)
-                .attr("transform", function() {
-                    if (USER_SEX == "female") {
-                        return "translate(" + x(curr_prob_of_life) + "," + y(life[i].age) + ")";
-                    } else {
-                        return "translate(" + x(life[i].age) + "," + y(1-life[i].male_prob_death) + ")";
-                    }
-                })
-                .each("end", transition);
-        } else {
+                    .attr("d", line(life.slice(USER_AGE,120)));
 
 
-
-
-
-
-
-                // Run another sim and go again.
-                CURR_AGE = USER_AGE;
-                curr_prob_of_life = 1;
-                end_age = simOneLife(USER_AGE, USER_SEX, life);
-                svg.append("path")
-                    .attr("class", "line")
-                    .attr("d", line(life));
-
-
-                transition();
-        } // @end else
-
-        CURR_AGE++;
-    }
 
 
 </script>
