--- a/mobile/src/main/assets/BuildFromScratch.html
+++ b/mobile/src/main/assets/BuildFromScratch.html
@@ -12,6 +12,7 @@
   </div>
   <script>
     //make the svg container
+    var w
     var svgContainer = d3.select("body").append("svg")
       .attr("width", "100%")
       .attr("height", "100%");
